# sentiment-duck

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  web_app.py  wsgi.py
.github/workflows/: codeql-analysis.yml  main.yml
devops/ansible/: .nginx  .service  Caddyfile  install_caddy.sh  main.yml  readme.txt
devops/packer/: config.sh  tut.pkr.hcl
devops/terraform/: .terraform.lock.hcl  main.tf  variables.tf
dynamodb/: update_dynamo.py
flask_app/: app.py
flask_app/templates/: mvp2.html
get_senti/: finance.py  get_reddit.py
go_app/: dynamodata.json  get_dyno_data.go  main.go  read_dyanmodb.py
go_app/static/: mvp2.html
lambda/: lambda_function.py
terraform_packer/packer/: tut.pkr.hcl
