[tool.poetry]
name = "sentiment-duck"
version = "0.1.0"
description = ""
authors = ["Sentiment Duck"]

[tool.poetry.dependencies]
python = "^3.9"
praw = "^7.5.0"
ipython = "^8.1.1"
nltk = "^3.7"
yfinance = "^0.1.70"
Flask = "^2.0.3"
pynamodb = "^5.2.1"
gunicorn = "^20.1.0"
wheel = "^0.37.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
